[package]
name = "kujira-rs-testing"
version = "1.0.3"
authors = ["Kujira Labs"]
edition = "2018"
description = "Interfaces and utilities for Kujira cosmwasm contracts"
license = "Apache-2.0"
homepage = "https://kujira.app"
repository = "https://github.com/Team-Kujira/kujira-rs"

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0.0" }
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
cw-multi-test = "0.16.2"
cw-storage-plus = "0.13.2"
anyhow = "1"
kujira = { git = "https://github.com/Team-Kujira/kujira-rs", rev = "ebcb0e684f11a33fedd0742035042523dbf39d6d" }
serde_json = "1.0"
base64 = "0.20.0"
hex = "0.4.3"
cw20 = "1.0"
