[package]
name = "kujira-rs-testing"
version = "1.1.0"
authors = ["Kujira Labs"]
edition = "2018"
description = "Interfaces and utilities for Kujira cosmwasm contracts"
license = "Apache-2.0"
homepage = "https://kujira.app"
repository = "https://github.com/Team-Kujira/kujira-rs"

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.5", features = ["cosmwasm_1_3"] }
cosmwasm-schema = "1.5"
schemars = "0.8.10"
serde = { version = "1.0", default-features = false, features = ["derive"] }
cw-multi-test = { version = "0.18", features = ["cosmwasm_1_3"] }
cw-storage-plus = "1.1"
anyhow = "1"
kujira = "0.8.2"
serde_json = "1.0"
base64 = "0.20.0"
hex = "0.4.3"
cw20 = "1.0"
